[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/login_screen/scripts/key_binds_manager.gd" type="Script" id=1]
[ext_resource path="res://scenes/login_screen/scripts/key_binds_generator.gd" type="Script" id=2]
[ext_resource path="res://scenes/login_screen/scripts/mouse_settings_manager.gd" type="Script" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="SettingsWindow" type="WindowDialog"]
pause_mode = 1
margin_right = 450.0
margin_bottom = 550.0
rect_min_size = Vector2( 350, 450 )
popup_exclusive = true
window_title = "Settings"
resizable = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsTabs" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Graphic" type="VBoxContainer" parent="SettingsTabs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Window" type="VBoxContainer" parent="SettingsTabs/Graphic"]
margin_right = 1912.0
margin_bottom = 114.0

[node name="Label" type="Label" parent="SettingsTabs/Graphic/Window"]
margin_right = 1912.0
margin_bottom = 14.0
text = "Window"
align = 1
valign = 1

[node name="Resolution" type="HBoxContainer" parent="SettingsTabs/Graphic/Window"]
margin_top = 18.0
margin_right = 1912.0
margin_bottom = 38.0

[node name="Label" type="Label" parent="SettingsTabs/Graphic/Window/Resolution"]
margin_top = 3.0
margin_right = 954.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "Resolution"
valign = 1

[node name="OptionButton" type="OptionButton" parent="SettingsTabs/Graphic/Window/Resolution"]
margin_left = 958.0
margin_right = 1912.0
margin_bottom = 20.0
size_flags_horizontal = 7
size_flags_vertical = 4
text = "1920x1080"
items = [ "1920x1080", null, false, 0, null, "1600x900", null, false, 1, null, "1366x768", null, false, 2, null, "1280x720", null, false, 3, null ]
selected = 0

[node name="Mode" type="HBoxContainer" parent="SettingsTabs/Graphic/Window"]
margin_top = 42.0
margin_right = 1912.0
margin_bottom = 62.0

[node name="Label" type="Label" parent="SettingsTabs/Graphic/Window/Mode"]
margin_top = 3.0
margin_right = 954.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "Mode"
valign = 1

[node name="OptionButton" type="OptionButton" parent="SettingsTabs/Graphic/Window/Mode"]
margin_left = 958.0
margin_right = 1912.0
margin_bottom = 20.0
size_flags_horizontal = 7
size_flags_vertical = 4
text = "Fullscreen"
items = [ "Fullscreen", null, false, 0, null, "Windowed", null, false, 1, null ]
selected = 0

[node name="Msaa" type="HBoxContainer" parent="SettingsTabs/Graphic/Window"]
margin_top = 66.0
margin_right = 1912.0
margin_bottom = 86.0

[node name="Label" type="Label" parent="SettingsTabs/Graphic/Window/Msaa"]
margin_top = 3.0
margin_right = 954.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "Msaa"
valign = 1

[node name="OptionButton" type="OptionButton" parent="SettingsTabs/Graphic/Window/Msaa"]
margin_left = 958.0
margin_right = 1912.0
margin_bottom = 20.0
size_flags_horizontal = 7
size_flags_vertical = 4
text = "Disabled"
items = [ "Disabled", null, false, 0, null, "MSAA 2x", null, false, 1, null, "MSAA 4x", null, false, 2, null, "MSAA 8x", null, false, 3, null, "MSAA 16x", null, false, 4, null ]
selected = 0

[node name="GridContainer" type="GridContainer" parent="SettingsTabs/Graphic/Window"]
margin_top = 90.0
margin_right = 1912.0
margin_bottom = 114.0
columns = 2

[node name="Vsync" type="CheckBox" parent="SettingsTabs/Graphic/Window/GridContainer"]
margin_left = 417.0
margin_right = 536.0
margin_bottom = 24.0
size_flags_horizontal = 6
text = "Vsync Enabled"
align = 1

[node name="FontOversampling" type="CheckBox" parent="SettingsTabs/Graphic/Window/GridContainer"]
margin_left = 1360.0
margin_right = 1509.0
margin_bottom = 24.0
size_flags_horizontal = 6
text = "Font Oversampling"
align = 1

[node name="Sound" type="VBoxContainer" parent="SettingsTabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Input" type="VBoxContainer" parent="SettingsTabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="VBoxContainer" parent="SettingsTabs/Input"]
margin_right = 1912.0
margin_bottom = 34.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="SettingsTabs/Input/Control"]
margin_right = 1912.0
margin_bottom = 14.0
text = "Control"
align = 1
valign = 1

[node name="MouseSensitivity" type="HBoxContainer" parent="SettingsTabs/Input/Control"]
margin_top = 18.0
margin_right = 1912.0
margin_bottom = 34.0
alignment = 2

[node name="Label" type="Label" parent="SettingsTabs/Input/Control/MouseSensitivity"]
margin_top = 1.0
margin_right = 954.0
margin_bottom = 15.0
size_flags_horizontal = 3
text = "Mouse Sensitivity"
align = 1
valign = 1

[node name="Input" type="HBoxContainer" parent="SettingsTabs/Input/Control/MouseSensitivity"]
margin_left = 958.0
margin_right = 1912.0
margin_bottom = 16.0
size_flags_horizontal = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slider" type="HSlider" parent="SettingsTabs/Input/Control/MouseSensitivity/Input"]
margin_right = 902.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 10.0
step = 0.1
tick_count = 11
ticks_on_borders = true

[node name="Value" type="LineEdit" parent="SettingsTabs/Input/Control/MouseSensitivity/Input"]
margin_left = 906.0
margin_right = 954.0
margin_bottom = 16.0
custom_styles/normal = SubResource( 1 )
align = 1
max_length = 3

[node name="KeyBinds" type="VBoxContainer" parent="SettingsTabs/Input"]
margin_top = 49.0
margin_right = 1912.0
margin_bottom = 1044.0
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="Label" type="Label" parent="SettingsTabs/Input/KeyBinds"]
margin_right = 1912.0
margin_bottom = 14.0
text = "Key Binds"
align = 1
valign = 1

[node name="ScrollContainer" type="ScrollContainer" parent="SettingsTabs/Input/KeyBinds"]
margin_top = 18.0
margin_right = 1912.0
margin_bottom = 995.0
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsTabs/Input/KeyBinds/ScrollContainer"]
margin_right = 1912.0
margin_bottom = 308.0
size_flags_horizontal = 3
custom_constants/separation = 0
script = ExtResource( 2 )

[node name="Labels" type="VBoxContainer" parent="SettingsTabs/Input/KeyBinds/ScrollContainer/HBoxContainer"]
margin_right = 956.0
margin_bottom = 308.0
size_flags_horizontal = 3

[node name="Buttons" type="VBoxContainer" parent="SettingsTabs/Input/KeyBinds/ScrollContainer/HBoxContainer"]
margin_left = 956.0
margin_right = 1912.0
margin_bottom = 308.0
size_flags_horizontal = 3
[connection signal="value_changed" from="SettingsTabs/Input/Control/MouseSensitivity/Input/Slider" to="SettingsTabs/Input/Control/MouseSensitivity/Input" method="_on_Slider_value_changed"]
[connection signal="focus_exited" from="SettingsTabs/Input/Control/MouseSensitivity/Input/Value" to="SettingsTabs/Input/Control/MouseSensitivity/Input" method="_on_Value_focus_exited"]
[connection signal="text_entered" from="SettingsTabs/Input/Control/MouseSensitivity/Input/Value" to="SettingsTabs/Input/Control/MouseSensitivity/Input" method="_on_Value_text_entered"]
